website-deployment/k8s-manifests/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pt-website-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: playtechnique.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pt-service
            port:
              number: 8080
  tls:
  - hosts:
    - playtechnique.io
    secretName: prodingress-cert
